# iostreams

./: .gitignore  CMakeLists.txt  Tests.cmake  ios-device.toolchain.cmake  ios-sim.toolchain.cmake  ios.toolchain.cmake
include/iostreams/: Serial.hpp  archive_stream.hpp  c_api.h  counting_streambuf.hpp  get_local_ip.hpp  http_client.hpp  http_common.hpp  memory_streambuf.hpp  p2p.hpp  platform.hpp  populate_addr_from_ip.hpp  resolve_host_or_ip_to_ip.hpp  ring_streambuf.hpp  socket_init.hpp  ssl_factory.hpp  string_is_ipv4.hpp  system_dns.hpp  tcp_client.hpp  tcp_iostream.hpp  tcp_server.hpp  tcp_streambuf.hpp  udp_client.hpp  udp_iostream.hpp  udp_server.hpp  udp_streambuf.hpp  udpmc_receiver.hpp  udpmc_sender.hpp
src/: Serial.cpp  archive_stream.cpp  c_api.cpp  get_local_ip.cpp  http_client.cpp  http_common.cpp  p2p.cpp  populate_addr_from_ip.cpp  resolve_host_or_ip_to_ip.cpp  socket_init.cpp  ssl_factory.cpp  string_is_ipv4.cpp  system_dns.cpp  tcp_client.cpp  tcp_iostream.cpp  tcp_server.cpp  tcp_streambuf.cpp  udp_client.cpp  udp_iostream.cpp  udp_server.cpp  udp_streambuf.cpp  udpmc_receiver.cpp  udpmc_sender.cpp
tests/: archive_stream.cpp  archive_tests.cpp  http_live_tests.cpp  http_parsing_tests.cpp  ip_validation_tests.cpp  ringbuf_advanced_tests.cpp  serial_advanced_tests.cpp  serial_tests.cpp  ssl_tests.cpp  streambuf_tests.cpp  tcp_tests.cpp  udp_tests.cpp  udpmc_tests.cpp  utility_tests.cpp
tests/ios_test_app/: CMakeLists.txt  README.md  RunSimulator.cmake
tests/ios_test_app/Resources/: Info.plist
tests/ios_test_app/Sources/: IostreamsTestApp-Bridging-Header.h  IostreamsTestApp.swift  iostreams_bridge.cpp  iostreams_bridge.h
